5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1831_1642.log
== TEST (2019-06-13 17:22:50) 
-- CODE:
from numpy import *
v = array(eval(input()))
a=0
for x in range(size(v)):
	if(v[x]/5 == 0):
		a=a+1
vet = zeros(a, dtype=int)
for x in range(size(v)):
	if()v[x]/5 == 0:
		vet[x] = x
print(a)
print(vet)
-- ERROR:
File "XXXX", line 9
    if()v[x]/5 == 0:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:23:00) 
-- CODE:
from numpy import *
v = array(eval(input()))
a=0
for x in range(size(v)):
	if(v[x]/5 == 0):
		a=a+1
vet = zeros(a, dtype=int)
for x in range(size(v)):
	if(v[x]/5 == 0):
		vet[x] = x
print(a)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:23:35) 
-- CODE:
from numpy import *
v = array(eval(input()))
a=0
for x in range(size(v)):
	if(v[x]//5 == 0):
		a=a+1
vet = zeros(a, dtype=int)
for x in range(size(v)):
	if(v[x]//5 == 0):
		vet[x] = x
print(a)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:23:55) 
-- CODE:
from numpy import *
v = array(eval(input()))
a=0
for x in range(size(v)):
	if(v[x]%5 == 0):
		a=a+1
vet = zeros(a, dtype=int)
for x in range(size(v)):
	if(v[x]%5 == 0):
		vet[x] = x
print(a)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:24:33) 
-- CODE:
from numpy import *
v = array(eval(input()))
a=0
for x in range(size(v)):
	if(v[x]%5 == 0):
		a=a+1
vet = zeros(a, dtype=int)
i = 0
for x in range(size(v)):
	if(v[x]%5 == 0):
		vet[i] = x
		i=i+1
print(a)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:24:42) 
-- CODE:
from numpy import *
v = array(eval(input()))
a=0
for x in range(size(v)):
	if(v[x]%5 == 0):
		a=a+1
vet = zeros(a, dtype=int)
i = 0
for x in range(size(v)):
	if(v[x]%5 == 0):
		vet[i] = x
		i=i+1
print(a)
print(vet)
-- EXECUTION TIME:
1.20588
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[ 0  1  5  6 10 11]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[0 1 3 6 7]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[0 1 3 7]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
